--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 AUTOMAKE_OPTIONS = foreign
 bin_PROGRAMS = myprogram
 myprogram_SOURCES = main.cpp FuncA.cpp FuncA.h
-
+check_PROGRAMS = test
+test_SOURCES = test.cpp FuncA.cpp
 PACKAGE = myprogram
 VERSION = 1.0
 PACKAGE_BUGREPORT = www.vandrey@gmail.com
@@ -26,3 +27,6 @@ debug:
 	@echo "${PACKAGE}"
 	@echo "${VERSION}"
 	@echo "${PACKAGE_BUGREPORT}"
+
+check: test
+	@./test
